--- a/src/app/components/canvas/canvas.component.scss
+++ b/src/app/components/canvas/canvas.component.scss
@@ -4,6 +4,7 @@
   display: block;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .canvas-wrapper {
@@ -11,9 +12,14 @@
   width: 100%;
   height: 100%;
   background: white;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 
   canvas {
     display: block;
+    margin: 0;
+    padding: 0;
   }
 }
 
